Backend fixed, backend checks for tokens, no userId in controllers needed anymore. added basic frontend functions